Fixed word wrap issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -87,6 +87,8 @@ main {
   border-top: 9px solid #CDE9FF;
   margin: 15px;
   margin-bottom: 10px;
+  box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
+  word-wrap: break-word;
 }
 
 .themeChanger {
